[gd_scene load_steps=13 format=3 uid="uid://c2oqv7yyets05"]

[ext_resource type="PackedScene" uid="uid://cnqoks4ixwme" path="res://Construction/LevelBoundryLower.tscn" id="1_c73su"]
[ext_resource type="Script" path="res://Levels/Level5.gd" id="1_tv3wa"]
[ext_resource type="PackedScene" uid="uid://57dr0t5pgq7m" path="res://Construction/BuildingWall.tscn" id="2_ndy45"]
[ext_resource type="PackedScene" uid="uid://b456we2kkyqch" path="res://Construction/GrabbableWall.tscn" id="3_15a77"]
[ext_resource type="PackedScene" uid="uid://b5pkhpmd5gb5p" path="res://Construction/Fire.tscn" id="4_08wpp"]
[ext_resource type="PackedScene" uid="uid://becahrjgy1o5x" path="res://Characters/Player.tscn" id="6_11cgt"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_w66b7"]
scenes/1/scene = ExtResource("2_ndy45")
scenes/2/scene = ExtResource("3_15a77")
scenes/3/scene = ExtResource("4_08wpp")

[sub_resource type="TileSet" id="TileSet_al7bn"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetScenesCollectionSource_w66b7")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kol10"]
size = Vector2(1860, 1635)

[sub_resource type="Animation" id="Animation_8ny07"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ak41"]
_data = {
"fade_out": SubResource("Animation_8ny07")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6m0l"]
size = Vector2(64, 64)

[node name="Level5" type="Node2D"]
script = ExtResource("1_tv3wa")

[node name="LevelBoundryLower" parent="." instance=ExtResource("1_c73su")]
position = Vector2(103, 3802)

[node name="LevelBoundryLeft" parent="." instance=ExtResource("1_c73su")]
position = Vector2(0, 1711)
rotation = 1.5708

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_al7bn")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(3276800, 0, 65536, 3276801, 0, 65536, 3276802, 0, 65536, 3276803, 0, 65536, 3276804, 0, 65536, 3276805, 0, 65536, 3276806, 0, 65536, 3276807, 0, 65536, 3276808, 0, 65536, 3276809, 0, 65536, 3276810, 0, 65536, 3276811, 0, 65536, 2686994, 0, 131072, 2687006, 0, 131072, 2687005, 0, 131072, 2687004, 0, 131072, 2687003, 0, 131072, 2687002, 0, 131072, 2687001, 0, 131072, 2687000, 0, 131072, 2686999, 0, 131072, 2686998, 0, 131072, 2686997, 0, 131072, 2686996, 0, 131072, 2686995, 0, 131072, 3080228, 0, 131072, 3145764, 0, 131072, 3211300, 0, 131072, 3276836, 0, 131072, 3342372, 0, 131072, 3407908, 0, 131072, 3473444, 0, 131072, 3538980, 0, 131072, 3604516, 0, 131072, 3670052, 0, 131072, 3735588, 0, 131072, 3801124, 0, 131072, 3866660, 0, 131072, 3932196, 0, 131072, 3997732, 0, 131072, 4063268, 0, 131072, 4128804, 0, 131072, 4259876, 0, 131072, 4194340, 0, 131072, 2555947, 0, 131072, 2621483, 0, 131072, 2687019, 0, 131072, 2752555, 0, 131072, 2818091, 0, 131072, 2883627, 0, 131072, 2949163, 0, 131072, 3014699, 0, 131072, 3080235, 0, 131072, 3145771, 0, 131072, 3211307, 0, 131072, 3276843, 0, 131072, 3342379, 0, 131072, 3407915, 0, 131072, 3473451, 0, 131072, 3538987, 0, 131072, 3604523, 0, 131072, 3670059, 0, 131072, 3735595, 0, 131072, 3801131, 0, 131072, 3866667, 0, 131072, 3932203, 0, 131072, 3997739, 0, 131072, 4063275, 0, 131072, 4128811, 0, 131072, 4194347, 0, 131072, 4259883, 0, 131072, 4325419, 0, 131072, 4390955, 0, 131072, 4456491, 0, 131072, 4522027, 0, 131072, 4587563, 0, 131072, 4653099, 0, 131072, 4718635, 0, 131072, 4784171, 0, 131072, 4849707, 0, 131072, 4915243, 0, 131072, 4980779, 0, 131072, 5046315, 0, 131072, 5111851, 0, 131072, 5177387, 0, 131072, 5242923, 0, 131072, 5308459, 0, 131072, 4325412, 0, 131072, 4390948, 0, 131072, 4456484, 0, 131072, 4522020, 0, 131072, 4587556, 0, 131072, 4653092, 0, 131072, 4718628, 0, 131072, 4784164, 0, 131072, 4849700, 0, 131072, 4915236, 0, 131072, 4980772, 0, 131072, 5046308, 0, 131072, 5111844, 0, 131072, 5177380, 0, 131072, 5242916, 0, 131072, 5308452, 0, 131072, 5373988, 0, 131072, 5439524, 0, 131072, 5505060, 0, 131072, 5570596, 0, 131072, 5636132, 0, 131072, 5701668, 0, 131072, 5767204, 0, 131072, 5832740, 0, 131072, 5832741, 0, 131072, 5832742, 0, 131072, 5832743, 0, 131072, 5832744, 0, 131072, 5832745, 0, 131072, 5832746, 0, 131072, 5832747, 0, 131072, 5832748, 0, 131072, 5832749, 0, 131072, 5832750, 0, 131072, 5832751, 0, 131072, 5832752, 0, 131072, 5832753, 0, 131072, 5832754, 0, 131072, 5832755, 0, 131072, 5832760, 0, 131072, 5832756, 0, 131072, 5832757, 0, 131072, 5832758, 0, 131072, 5832759, 0, 131072, 5767224, 0, 131072, 5701688, 0, 131072, 5636152, 0, 131072, 5570616, 0, 131072, 5505080, 0, 131072, 5439544, 0, 131072, 5374008, 0, 131072, 5308472, 0, 131072, 5242936, 0, 131072, 5177400, 0, 131072, 5111864, 0, 131072, 5046328, 0, 131072, 4980792, 0, 131072, 4915256, 0, 131072, 4849720, 0, 131072, 4784184, 0, 131072, 4718648, 0, 131072, 4653112, 0, 131072, 4587576, 0, 131072, 4522040, 0, 131072, 4456504, 0, 131072, 4390968, 0, 131072, 4325432, 0, 131072, 4259896, 0, 131072, 4194360, 0, 131072, 4128824, 0, 131072, 4063288, 0, 131072, 3997752, 0, 131072, 3932216, 0, 131072, 3866680, 0, 131072, 3801144, 0, 131072, 3735608, 0, 131072, 3670072, 0, 131072, 3604536, 0, 131072, 3539000, 0, 131072, 3473464, 0, 131072, 3407928, 0, 131072, 3342392, 0, 131072, 3276856, 0, 131072, 3211320, 0, 131072, 3145784, 0, 131072, 2490411, 0, 131072, 2490412, 0, 131072, 2490413, 0, 131072, 2490414, 0, 131072, 2490415, 0, 131072, 2490416, 0, 131072, 2490417, 0, 131072, 2490418, 0, 131072, 2490419, 0, 131072, 2490420, 0, 131072, 2490421, 0, 131072, 2490422, 0, 131072, 2490423, 0, 131072, 2490424, 0, 131072, 2490425, 0, 131072, 2490426, 0, 131072, 2490427, 0, 131072, 2490428, 0, 131072, 2490429, 0, 131072, 2490430, 0, 131072, 2490431, 0, 131072, 2490432, 0, 131072, 2490433, 0, 131072, 2490434, 0, 131072, 2490435, 0, 131072, 2490436, 0, 131072, 2490437, 0, 131072, 2490438, 0, 131072, 2555974, 0, 131072, 2621510, 0, 131072, 2687046, 0, 131072, 2752582, 0, 131072, 2818118, 0, 131072, 2883654, 0, 131072, 2949190, 0, 131072, 3014726, 0, 131072, 3080262, 0, 131072, 3145798, 0, 131072, 3211334, 0, 131072, 3276870, 0, 131072, 3342406, 0, 131072, 3407942, 0, 131072, 3473478, 0, 131072, 3539014, 0, 131072, 3604550, 0, 131072, 3670086, 0, 131072, 4390969, 0, 131072, 4390970, 0, 131072, 4390971, 0, 131072, 4390972, 0, 131072, 4390973, 0, 131072, 4390974, 0, 131072, 4390975, 0, 131072, 4390976, 0, 131072, 4390977, 0, 131072, 4390978, 0, 131072, 4390979, 0, 131072, 4390980, 0, 131072, 4390981, 0, 131072, 4390982, 0, 131072, 4390983, 0, 131072, 4390984, 0, 131072, 4390985, 0, 131072, 4390986, 0, 131072, 4390987, 0, 131072, 3670087, 0, 131072, 3670088, 0, 131072, 3670089, 0, 131072, 3670090, 0, 131072, 3670091, 0, 131072, 3670092, 0, 131072, 3670093, 0, 131072, 3670094, 0, 131072, 3670095, 0, 131072, 3670096, 0, 131072, 3670097, 0, 131072, 3670098, 0, 131072, 3670099, 0, 131072, 3670100, 0, 131072, 3735637, 0, 131072, 3801173, 0, 131072, 3866709, 0, 131072, 3932245, 0, 131072, 3997781, 0, 131072, 4063317, 0, 131072, 4128853, 0, 131072, 4194389, 0, 131072, 4259925, 0, 131072, 4325461, 0, 131072, 3670101, 0, 131072, 4390997, 0, 131072, 4456533, 0, 131072, 4522069, 0, 131072, 4587605, 0, 131072, 4653141, 0, 131072, 4718677, 0, 131072, 4784213, 0, 131072, 4849749, 0, 131072, 4915285, 0, 131072, 4980821, 0, 131072, 5046357, 0, 131072, 5111893, 0, 131072, 5177429, 0, 131072, 5177428, 0, 131072, 5177427, 0, 131072, 5177426, 0, 131072, 5177425, 0, 131072, 5177424, 0, 131072, 5177423, 0, 131072, 5177422, 0, 131072, 5177421, 0, 131072, 5177420, 0, 131072, 5177419, 0, 131072, 5177418, 0, 131072, 5177417, 0, 131072, 5177416, 0, 131072, 5177415, 0, 131072, 5177414, 0, 131072, 5177413, 0, 131072, 5177412, 0, 131072, 5177411, 0, 131072, 5832761, 0, 131072, 5832762, 0, 131072, 5832763, 0, 131072, 5832764, 0, 131072, 5832765, 0, 131072, 5832766, 0, 131072, 5832767, 0, 131072, 5832768, 0, 131072, 5832769, 0, 131072, 5832770, 0, 131072, 5832771, 0, 131072, 5832772, 0, 131072, 5832773, 0, 131072, 5832774, 0, 131072, 5832775, 0, 131072, 5832776, 0, 131072, 5832777, 0, 131072, 5832778, 0, 131072, 5832779, 0, 131072, 5832780, 0, 131072, 5832781, 0, 131072, 5832782, 0, 131072, 5832783, 0, 131072, 5832784, 0, 131072, 5832785, 0, 131072, 5832786, 0, 131072, 5832787, 0, 131072, 5832788, 0, 131072, 5832789, 0, 131072, 5832790, 0, 131072, 5832791, 0, 131072, 5832792, 0, 131072, 5832793, 0, 131072, 5832794, 0, 131072, 5832795, 0, 131072, 5832796, 0, 131072, 5832797, 0, 131072, 5767261, 0, 131072, 5701725, 0, 131072, 5636189, 0, 131072, 5570653, 0, 131072, 5505117, 0, 131072, 5439581, 0, 131072, 5374045, 0, 131072, 5308509, 0, 131072, 5242973, 0, 131072, 5046365, 0, 131072, 5111901, 0, 131072, 5177437, 0, 131072, 4980829, 0, 131072, 4718685, 0, 131072, 4653149, 0, 131072, 4784221, 0, 131072, 4849757, 0, 131072, 4915293, 0, 131072, 4587613, 0, 131072, 4522077, 0, 131072, 4456541, 0, 131072, 4391005, 0, 131072, 4325469, 0, 131072, 4259933, 0, 131072, 4194397, 0, 131072, 4128861, 0, 131072, 4063325, 0, 131072, 3997789, 0, 131072, 3932253, 0, 131072, 3866717, 0, 131072, 3801181, 0, 131072, 3735645, 0, 131072, 3670109, 0, 131072, 3604573, 0, 131072, 3539037, 0, 131072, 3473501, 0, 131072, 3407965, 0, 131072, 3342429, 0, 131072, 3276893, 0, 131072, 3211357, 0, 131072, 3145821, 0, 131072, 3080285, 0, 131072, 3014749, 0, 131072, 2949213, 0, 131072, 2949212, 0, 131072, 2949211, 0, 131072, 2949210, 0, 131072, 2949209, 0, 131072, 2949208, 0, 131072, 2949207, 0, 131072, 2949206, 0, 131072, 2949205, 0, 131072, 2949204, 0, 131072, 2949203, 0, 131072, 2949202, 0, 131072, 2949201, 0, 131072, 2949200, 0, 131072, 2490439, 0, 131072, 2490440, 0, 131072, 2490443, 0, 131072, 2490444, 0, 131072, 2490445, 0, 131072, 2490446, 0, 131072, 2490447, 0, 131072, 2490448, 0, 131072, 2490449, 0, 131072, 2490450, 0, 131072, 2490451, 0, 131072, 2490442, 0, 131072, 2490441, 0, 131072, 2883677, 0, 131072, 2818141, 0, 131072, 2752605, 0, 131072, 2687069, 0, 131072, 2621533, 0, 131072, 2555997, 0, 131072, 2490461, 0, 131072, 2424925, 0, 131072, 2359389, 0, 131072, 2293853, 0, 131072, 2228317, 0, 131072, 2162781, 0, 131072, 1966173, 0, 131072, 1900637, 0, 131072, 2031709, 0, 131072, 2097245, 0, 131072, 2424875, 0, 65536, 2359339, 0, 65536, 2293803, 0, 65536, 2228267, 0, 65536, 2162731, 0, 65536, 2097195, 0, 65536, 2031659, 0, 65536, 1966123, 0, 65536, 1900587, 0, 65536, 1835051, 0, 65536, 1769515, 0, 65536, 1703979, 0, 65536, 1638443, 0, 65536, 1572907, 0, 65536, 1507371, 0, 65536, 1441835, 0, 65536, 1376299, 0, 65536, 1310763, 0, 65536, 1245227, 0, 65536, 1179691, 0, 65536, 1114155, 0, 65536, 1048619, 0, 65536, 983083, 0, 65536, 917547, 0, 65536, 852011, 0, 65536, 786475, 0, 65536, 720939, 0, 65536, 655403, 0, 65536, 589867, 0, 65536, 524331, 0, 65536, 3735552, 0, 196608, 3735553, 0, 196608, 3735554, 0, 196608, 3735555, 0, 196608, 3735556, 0, 196608, 3735557, 0, 196608, 3735558, 0, 196608, 3735559, 0, 196608, 3735560, 0, 196608, 3735561, 0, 196608, 3735562, 0, 196608, 3735563, 0, 196608, 3735564, 0, 196608, 3735565, 0, 196608, 3735566, 0, 196608, 3735567, 0, 196608, 3735568, 0, 196608, 3735569, 0, 196608, 3735570, 0, 196608, 3735571, 0, 196608, 3735572, 0, 196608, 3735573, 0, 196608, 3735574, 0, 196608, 3735575, 0, 196608, 3735576, 0, 196608, 3735577, 0, 196608, 3735578, 0, 196608, 3735579, 0, 196608, 3735580, 0, 196608, 3735581, 0, 196608, 3735582, 0, 196608, 3735583, 0, 196608, 3735584, 0, 196608, 3735585, 0, 196608, 3735586, 0, 196608, 3735587, 0, 196608, 2490410, 0, 65536, 2490409, 0, 65536, 2490408, 0, 65536, 2490407, 0, 65536, 2490406, 0, 65536, 2490405, 0, 65536, 2490404, 0, 65536, 1900636, 0, 131072, 1900635, 0, 131072, 1900634, 0, 131072, 1900633, 0, 131072, 1900632, 0, 131072, 2359379, 0, 131072, 2424915, 0, 131072, 1835101, 0, 65536, 1769565, 0, 65536, 1704029, 0, 65536, 1638493, 0, 65536, 1572957, 0, 65536, 1507421, 0, 65536, 1441885, 0, 65536, 1376349, 0, 65536, 1310813, 0, 65536, 1245277, 0, 65536, 1179741, 0, 65536, 1114205, 0, 65536, 1048669, 0, 65536, 983133, 0, 65536, 917597, 0, 65536, 852061, 0, 65536, 786525, 0, 65536, 720989, 0, 65536, 655453, 0, 65536, 589917, 0, 65536, 524381, 0, 65536, 458845, 0, 65536, 393309, 0, 65536, 327773, 0, 65536, 327774, 0, 65536)

[node name="MazeZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeZone"]
position = Vector2(2057, 2051.5)
shape = SubResource("RectangleShape2D_kol10")

[node name="MazeHider" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 1185.0
offset_top = 1248.0
offset_right = 2978.0
offset_bottom = 2847.0
color = Color(0.0156863, 0.168627, 0.27451, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="MazeHider"]
libraries = {
"": SubResource("AnimationLibrary_6ak41")
}

[node name="FinishLine" type="Area2D" parent="."]
position = Vector2(1485, 1137)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishLine"]
shape = SubResource("RectangleShape2D_v6m0l")

[node name="Player" parent="." instance=ExtResource("6_11cgt")]
position = Vector2(90, 1509)

[connection signal="body_entered" from="MazeZone" to="." method="_on_maze_zone_body_entered"]
[connection signal="body_exited" from="MazeZone" to="." method="_on_maze_zone_body_exited"]
[connection signal="body_entered" from="FinishLine" to="." method="_on_finish_line_body_entered"]
